[package]
name = "rustow"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
dirs = "6.0.0"
regex = "1.11.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
walkdir = "2.5.0"
pathdiff = "0.2.1"

[dev-dependencies]
lazy_static = "1.4.0"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
